--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,13 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
 #root{
   background-color:#1E1E1E; 
   font-family: 'Poppins';
+}
+.Content {
+  flex: 1;
+  overflow-y: auto;
 }
