--- a/src/components/video.css
+++ b/src/components/video.css
@@ -15,16 +15,17 @@
 .videotitle{
     display: flex;
     align-items: center;
-    max-width: 42vw;
-    margin: 0 auto;
+    max-width: 60vw;
+    margin:  auto;
     text-align: justify;
+    margin-top: 50px;
 }
 .page-title{
     margin-bottom: -20px;
 }
 .videoimg{
 
-    width: 40vw;
+    width: 50vw;
     border-radius: 20px;
     display: block;
     margin: 0 auto;
@@ -33,4 +34,11 @@
 .QR{
     margin-right: 20px;
     width: 8vw;
+}
+p {
+    max-width: 35vw;
+    margin-left: auto;
+    margin-right: auto;
+    color: #D4D4D4;
+  
 }
